[package]
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "Rootless insecure remote shell"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "rlirsh"
repository = "https://github.com/gifnksm/rlirsh"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
bincode = "1.3.3"
color-eyre = "0.5.11"
etc-passwd = "0.1.1"
futures-util = {version = "0.3.14", default-features = false, features = ["std"]}
libc = "0.2.93"
serde = {version = "1.0.125", features = ["derive"]}
tokio = {version = "1.5.0", features = ["fs", "io-util", "macros", "net", "process", "rt", "sync"]}
tracing = "0.1.25"
tracing-error = "0.1.2"
tracing-subscriber = "0.2.17"
