[package]
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
edition = "2018"
name = "tokio-pty-command"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = {version = "0.3.14", default-features = false, features = ["std"]}
nix = "0.20.0"
tokio = {version = "1.5.0", features = ["net", "process"]}
